--- a/src/com/bilgeadam/rehberprj/gui/MenuForm.form
+++ b/src/com/bilgeadam/rehberprj/gui/MenuForm.form
@@ -42,11 +42,6 @@
           <text value="Ekle"/>
         </properties>
       </component>
-      <vspacer id="e51b2">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <hspacer id="80af0">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -57,6 +52,14 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
+      <component id="57b57" class="javax.swing.JButton" binding="silButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Sil"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
